# src/api/player.ts
@@ -1,0 +1,8 @@
+import request from '@/utils/request'
+
+export const getPlayers = (params: any) => 
+    request({
+        url: '/players',
+        method: 'get',
+        params
+    })
